chapter5/my-service-04.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalancer
  selector:
    app: this-is-my-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
