chapter5/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000 
    targetPort: 8080
