chapter5/my-ingress-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "*.myapp.mydomain.com"
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: my-service
            port:
              number: 3000
