chapter5/my-ingress-03.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: user-service
            port:
              number: 3000
      - pathType: Exact
        path: /products
        backend:
          service:
            name: product-service
            port:
              number: 8080
